styles.css
* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: "Open Sans";
    background-color: black;
    background-image: linear-gradient(120deg, hsl(0, 15%, 18%), hsl(0, 7%, 24%));
    background-attachment: fixed;
    margin: 0;
    color: antiquewhite;
}

/******************
 * NAVBAR STYLING *============================================================
 ******************/

.navbar {
    background-color: hsl(0, 7%, 13%);
    margin: 0;
    padding: 5px;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: row;
    justify-content: end;
    border-bottom: 2px solid rgb(114, 109, 103);
}

.nav-icon {
    vertical-align: middle;
    margin: 0 10px 0 0;
    stroke: antiquewhite;
}

.navbar a {
    padding: 12px;
    text-decoration: none;
    font-weight: bold;
    color: antiquewhite;
    border-radius: 7px;
}

.navbar a:hover {
    color: burlywood;
    background-color: hsl(0, 15%, 27%);
}

.navbar a:hover svg {
    stroke: burlywood;
}

.navbar a:active {
    color: dimgrey;
    background-color: hsl(0, 15%, 18%);
}

.navbar a:active svg {
    stroke: dimgrey;
}

/******************
 * HEADER STYLING *===========================================================
 ******************/

header {
    padding-top: 40px;
}

#title {
    text-align: center;
    font-family: "Domine";
    font-size: 36pt;
    padding: 100px 0px 0px 0px;
}

.subtitle {
    text-align: center;
    font-family: "Open Sans";
    font-size: medium;
    font-weight: normal;
    margin: 0 0 0 400px;
}

.subtitle::after {
    content: "Hex";
    font-weight: bold;
    color: tomato;
}

/*******************
 * SECTION STYLING *===========================================================
 *******************/

.big-emoji {
    font-size: 4rem;
    vertical-align: middle;
}

section:before {
    height: 40px;
    content: "";
    display:block;
}

section p:last-of-type {
    margin-bottom: -40px;
}

#graphs p:last-of-type {
    padding-bottom: 40px;
}

.section-title {
    margin: 50px;
    font-family: "Domine";
    font-size: 24pt;
}

p {
    margin: 25px 50px;
    font-size: large;
}

a {
    color: goldenrod;
}

a:hover {
    color: hsl(43, 74%, 65%);
}

a:active {
    color: hsl(43, 74%, 80%);
}

.external {
    margin-left: 2px;
    width: 15px;
    height: 15px;
}

em {
    font-style: normal;
    font-weight: bold;
    color:tomato;
}

ol, ul {
    margin: 25px 50px;
    font-size: large;
}

li {
    margin-bottom: 25px;
}

/*****************
 * IMAGE STYLING *=============================================================
 *****************/

.logo-box {
    float: right;
    margin: 0 50px 80px 30px;
    padding: 10px;
    height: 150px;
    width: 150px;
}

.logo-box figcaption {
    margin-left: 17px;
}

.obsidian-logo {
    background-color: hsl(220, 50%, 91%);
    padding: 10px;
    height: 150px;
    width: 150px;
    border-radius: 20%;
    box-shadow: 0 0 20px black;
    transition: filter 0.3s, box-shadow 0.3s;
}

.obsidian-logo:hover {
    filter: sepia(50%);
    box-shadow: 0 0 40px black;
}

.obsidian-logo:active {
    filter: sepia(50%) brightness(50%);
    box-shadow: 0 0 40px black;
}

.image-box {
    float: left;
    width: 400px;
    margin: 0 30px 30px 50px;
}

.image {
    width: 400px;
    border-radius: 20px;
    box-shadow: 0 0 5px black;
}

figcaption {
    font-size: medium;
    font-style: italic;
    text-align: center;
    padding-top: 10px;
}

footer {
    background-color: hsl(0, 7%, 13%);
    margin: 80px 0 0 0;
    padding: 5px;
    width: 100%;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: row;
    justify-content: end;
    border-top: 2px solid rgb(114, 109, 103);
}

@media only screen and (max-width: 768px) {
    .navbar {
        position: static;
        flex-wrap: wrap;
    }

    .navbar a {
        text-align: center;
        width: 100%;
    }

    header {
        padding-top: 0px;
    }

    #title {
        font-size: 24pt;
        padding: 90px 0 calc(90px - 24pt) 0;
    }
    
    .subtitle {
        font-size: small;
        font-weight: normal;
        margin: 0 0 0 250px;
    }

    .big-emoji {
        font-size: 3rem;
        vertical-align: middle;
    }

    section:before {
        height: 0;
    }
    
    section {
        margin-bottom: 0;
    }

    section p:last-of-type {
        margin-bottom: 0px;
    }

    .section-title {
        margin: 35px;
        font-family: "Domine";
        font-size: 18pt;
    }

    p {
        margin: 35px;
        font-size: medium;
    }

    ol, ul {
        margin: 35px;
        font-size: medium;
    }

    .external {
        width: 12px;
        height: 12px;
    }

    .image-box {
        float: none;
        display: block;
        margin: auto;
    }

    figcaption {
        font-size: small;
    }

    footer {
        margin: 40px 0 0 0;
        font-size: small;
    }
}

@media only screen and (max-width: 520px) {
    .image-box {
        width: 80vw;
    }
    .image {
        width: 80vw;
    }
}

@media only screen and (max-width: 450px) {
    .break {
        display: block;
    }
    .subtitle {
        margin: 0 0 0 90px;
    }
    .logo-box {
        float: none;
        display: block;
        margin: auto;
        margin-bottom: 80px;
    }
}

